--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,27 @@
 anyio==3.6.2
+certifi==2022.12.7
 click==8.1.3
+exceptiongroup==1.1.1
 fastapi==0.89.1
 greenlet==2.0.2
 h11==0.14.0
+httpcore==0.17.0
 httptools==0.5.0
+httpx==0.24.0
 idna==3.4
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.0.0
 pydantic==1.10.4
 PyJWT==2.6.0
+pytest==7.3.1
+pytest-asyncio==0.21.0
 python-dotenv==0.21.1
 PyYAML==6.0
 sniffio==1.3.0
 SQLAlchemy==2.0.12
 starlette==0.22.0
+tomli==2.0.1
 typing_extensions==4.4.0
 uvicorn==0.20.0
 uvloop==0.17.0
